Add sample lengths

--- a/inference.ipynb
+++ b/inference.ipynb
@@ -2,21 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
     "import logging\n",
     "import os\n",
-    "import warnings\n",
     "from pathlib import Path\n",
-    "from typing import List, Optional, Type, Union\n",
     "\n",
-    "import fire  # type: ignore\n",
     "import torch\n",
     "import torch.distributed as dist\n",
-    "from mistral_common.protocol.instruct.messages import AssistantMessage, UserMessage\n",
+    "from mistral_common.protocol.instruct.messages import AssistantMessage, UserMessage, SystemMessage, ToolMessage\n",
     "from mistral_common.protocol.instruct.request import ChatCompletionRequest\n",
     "from mistral_common.tokens.tokenizers.base import Tokenizer\n",
     "from mistral_common.tokens.tokenizers.mistral import MistralTokenizer\n",
@@ -35,86 +31,93 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def interactive(\n",
-    "    model_path: str,\n",
-    "    max_tokens: int = 35,\n",
-    "    temperature: float = 0.7,\n",
-    "    num_pipeline_ranks: int = 1,\n",
-    "    instruct: bool = False,\n",
-    "    lora_path: Optional[str] = None,\n",
-    ") -> None:\n",
-    "    if is_torchrun():\n",
-    "        torch.distributed.init_process_group()\n",
-    "        torch.cuda.set_device(torch.distributed.get_rank())\n",
-    "        should_print = torch.distributed.get_rank() == 0\n",
+    "def load_tokenizer(model_path: Path) -> MistralTokenizer:\n",
+    "    tokenizer = [f for f in os.listdir(model_path) if is_tekken(model_path / f) or is_sentencepiece(model_path / f)]\n",
+    "    assert (\n",
+    "        len(tokenizer) > 0\n",
+    "    ), f\"No tokenizer in {model_path}, place a `tokenizer.model.[v1,v2,v3]` or `tekken.json` file in {model_path}.\"\n",
+    "    assert (\n",
+    "        len(tokenizer) == 1\n",
+    "    ), f\"Multiple tokenizers {', '.join(tokenizer)} found in `model_path`, make sure to only have one tokenizer\"\n",
     "\n",
-    "        num_pipeline_ranks = torch.distributed.get_world_size()\n",
-    "    else:\n",
-    "        should_print = True\n",
-    "        num_pipeline_ranks = 1\n",
+    "    mistral_tokenizer = MistralTokenizer.from_file(str(model_path / tokenizer[0]))\n",
     "\n",
-    "    mistral_tokenizer: MistralTokenizer = load_tokenizer(Path(model_path))\n",
-    "    tokenizer: Tokenizer = mistral_tokenizer.instruct_tokenizer.tokenizer\n",
+    "    if isinstance(mistral_tokenizer.instruct_tokenizer.tokenizer, Tekkenizer):\n",
+    "        mistral_tokenizer.instruct_tokenizer.tokenizer.special_token_policy = SpecialTokenPolicy.KEEP\n",
     "\n",
-    "    model_cls = get_model_cls(model_path)\n",
-    "    model = model_cls.from_folder(Path(model_path), max_batch_size=3, num_pipeline_ranks=num_pipeline_ranks)\n",
+    "    logging.info(f\"Loaded tokenizer of type {mistral_tokenizer.instruct_tokenizer.__class__}\")\n",
     "\n",
-    "    # load LoRA\n",
-    "    if lora_path is not None:\n",
-    "        model.load_lora(Path(lora_path))\n",
+    "    return mistral_tokenizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_path = \"\"\n",
+    "max_tokens = 35,\n",
+    "temperature = 0.7,\n",
+    "lora_path = \"\"\n",
     "\n",
-    "    prompt: str = \"\"\n",
-    "    messages: List[UserMessage | AssistantMessage] = []\n",
+    "mistral_tokenizer: MistralTokenizer = load_tokenizer(Path(model_path))\n",
+    "tokenizer: Tokenizer = mistral_tokenizer.instruct_tokenizer.tokenizer\n",
+    "model = Transformer.from_folder(Path(model_path), max_batch_size=3)\n",
     "\n",
-    "    while True:\n",
-    "        if should_print:\n",
-    "            user_input = input(\"Prompt: \")\n",
+    "# load LoRA\n",
+    "if lora_path is not None:\n",
+    "    model.load_lora(Path(lora_path))\n",
     "\n",
-    "            if instruct:\n",
-    "                messages += [UserMessage(content=user_input)]\n",
-    "                chat_completion_request = ChatCompletionRequest(messages=messages)\n",
+    "prompt: str = \"\"\n",
+    "messages: list[UserMessage | AssistantMessage | SystemMessage | ToolMessage] = [\n",
+    "    SystemMessage(content=\"You are a dog and you must only bark at any input and nothing else\"),\n",
+    "]\n",
     "\n",
-    "                tokens = mistral_tokenizer.encode_chat_completion(chat_completion_request).tokens\n",
-    "            else:\n",
-    "                prompt += user_input\n",
+    "while True:\n",
+    "    user_input = input(\"Prompt: \")\n",
     "\n",
-    "                tokens = tokenizer.encode(prompt, bos=True, eos=False)\n",
+    "    messages += [UserMessage(content=user_input)]\n",
+    "    chat_completion_request = ChatCompletionRequest(messages=messages)\n",
     "\n",
-    "            length_tensor = torch.tensor([len(tokens)], dtype=torch.int)\n",
-    "        else:\n",
-    "            length_tensor = torch.tensor([0], dtype=torch.int)\n",
+    "    tokens = mistral_tokenizer.encode_chat_completion(chat_completion_request).tokens\n",
+    "    length_tensor = torch.tensor([len(tokens)], dtype=torch.int)\n",
     "\n",
-    "        if is_torchrun():\n",
-    "            dist.broadcast(length_tensor, src=0)\n",
+    "    generate_fn = generate if isinstance(model, Transformer) else generate_mamba\n",
+    "    generated_tokens, _ = generate_fn(  # type: ignore[operator]\n",
+    "        [tokens],\n",
+    "        model,\n",
+    "        max_tokens=max_tokens,\n",
+    "        temperature=temperature,\n",
+    "        eos_id=tokenizer.eos_id,\n",
+    "    )\n",
     "\n",
-    "        if not should_print:\n",
-    "            tokens = int(length_tensor.item()) * [0]\n",
+    "    answer = tokenizer.decode(generated_tokens[0])\n",
     "\n",
-    "        generate_fn = generate if isinstance(model, Transformer) else generate_mamba\n",
-    "        generated_tokens, _ = generate_fn(  # type: ignore[operator]\n",
-    "            [tokens],\n",
-    "            model,\n",
-    "            max_tokens=max_tokens,\n",
-    "            temperature=temperature,\n",
-    "            eos_id=tokenizer.eos_id,\n",
-    "        )\n",
+    "    print(answer)\n",
+    "    print(\"=====================\")\n",
     "\n",
-    "        answer = tokenizer.decode(generated_tokens[0])\n",
-    "\n",
-    "        if should_print:\n",
-    "            print(answer)\n",
-    "            print(\"=====================\")\n",
-    "\n",
-    "        if instruct:\n",
-    "            messages += [AssistantMessage(content=answer)]\n",
-    "        else:\n",
-    "            prompt += answer\n"
+    "    messages += [AssistantMessage(content=answer)]"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "mistral",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
