--- a/test.ipynb
+++ b/test.ipynb
@@ -87,6 +87,7 @@
     "            )\n",
     "        ],\n",
     "        messages=[\n",
+    "            SystemMessage(content=\"this is a system message\"),\n",
     "            UserMessage(content=\"What's the weather like today in Paris\"),\n",
     "            FinetuningAssistantMessage(content=\"Let me search that up for you\"),\n",
     "            FinetuningAssistantMessage(tool_calls=[ToolCall(id=\"3XhQnxLsT\", function=FunctionCall(name=\"get_current_weather\", arguments='{\"location\": \"Paris, FR\", \"format\": \"celsius\"}'))]),\n",
