Load correct tokenizer and remove samples from data based on length, update configs

--- a/test.ipynb
+++ b/test.ipynb
@@ -24,14 +24,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "222\n"
+      "229\n"
      ]
     }
    ],
@@ -40,7 +40,8 @@
     "from mistral_common.protocol.instruct.messages import (\n",
     "    UserMessage,\n",
     "    ToolMessage,\n",
-    "    FinetuningAssistantMessage\n",
+    "    FinetuningAssistantMessage,\n",
+    "    SystemMessage\n",
     ")\n",
     "from mistral_common.protocol.instruct.request import ChatCompletionRequest\n",
     "from mistral_common.protocol.instruct.tool_calls import (\n",
@@ -89,8 +90,7 @@
     "        messages=[\n",
     "            SystemMessage(content=\"this is a system message\"),\n",
     "            UserMessage(content=\"What's the weather like today in Paris\"),\n",
-    "            FinetuningAssistantMessage(content=\"Let me search that up for you\"),\n",
-    "            FinetuningAssistantMessage(tool_calls=[ToolCall(id=\"3XhQnxLsT\", function=FunctionCall(name=\"get_current_weather\", arguments='{\"location\": \"Paris, FR\", \"format\": \"celsius\"}'))]),\n",
+    "            FinetuningAssistantMessage(content=\"Let me search that up for you\", tool_calls=[ToolCall(id=\"3XhQnxLsT\", function=FunctionCall(name=\"get_current_weather\", arguments='{\"location\": \"Paris, FR\", \"format\": \"celsius\"}'))]),\n",
     "            ToolMessage(tool_call_id=\"3XhQnxLsT\", content=\"20\"),\n",
     "            FinetuningAssistantMessage(content=\"The weather is 20 degrees Celsius\"),\n",
     "            UserMessage(content=\"Describe what that temperature feels like\"),\n",
@@ -107,14 +107,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokeniz = MistralTokenizer.v3(\n",
+    "        is_tekken=False\n",
+    "    ).instruct_tokenizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokeniz.BEGIN_SYS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<s>[INST]What's the weather like today in Paris[/INST]Let me search that up for you[TOOL_CALLS][{\"name\": \"get_current_weather\", \"arguments\": {\"location\": \"Paris, FR\", \"format\": \"celsius\"}, \"id\": \"3XhQnxLsT\"}]</s>[TOOL_RESULTS]{\"content\": 20, \"call_id\": \"3XhQnxLsT\"}[/TOOL_RESULTS]The weather is 20 degrees Celsius</s>[AVAILABLE_TOOLS][{\"type\": \"function\", \"function\": {\"name\": \"get_current_weather\", \"description\": \"Get the current weather\", \"parameters\": {\"type\": \"object\", \"properties\": {\"location\": {\"type\": \"string\", \"description\": \"The city and state, e.g. San Francisco, CA\"}, \"format\": {\"type\": \"string\", \"enum\": [\"celsius\", \"fahrenheit\"], \"description\": \"The temperature unit to use. Infer this from the users location.\"}}, \"required\": [\"location\", \"format\"]}}}][/AVAILABLE_TOOLS][INST]Describe what that temperature feels like[/INST]It feels warm</s>\n"
+      "[1, 5, 1091, 19227, 4994, 2811, 1429, 5165, 1897, 1429, 5165, 2811, 16753, 2391, 2811, 1429, 1689, 45971, 1095, 45629, 1897, 1429, 14653, 2811, 1429, 4147, 1278, 3519, 17253, 1897, 1429, 26204, 2811, 16753, 4994, 2811, 1429, 6371, 1897, 1429, 48649, 2811, 16753, 17611, 2811, 16753, 4994, 2811, 1429, 3607, 1897, 1429, 14653, 2811, 1429, 1784, 5970, 1321, 3468, 1044, 1324, 3596, 1046, 5151, 12717, 1044, 13461, 50666, 1429, 8092, 2811, 16753, 4994, 2811, 1429, 3607, 1897, 1429, 31222, 2811, 12161, 1099, 79092, 1897, 1429, 38600, 10432, 31597, 1429, 14653, 2811, 1429, 1784, 6138, 5476, 1317, 2210, 1046, 90463, 1593, 1562, 1278, 8616, 7285, 2613, 47579, 1429, 15760, 2811, 12161, 17611, 1897, 1429, 8092, 4964, 2821, 27028, 6, 14, 2496, 1395, 1261, 2663, 5117, 15, 3, 7493, 1681, 1278, 17253, 2479, 9406, 1294, 6993, 4, 12598, 1639, 6123, 1455, 2015, 1394, 1636, 9, 1091, 19227, 2391, 2811, 1429, 1689, 45971, 1095, 45629, 1897, 1429, 61906, 2811, 16753, 17611, 2811, 1429, 42572, 1044, 46822, 1897, 1429, 8092, 2811, 1429, 1099, 79092, 50666, 1429, 1327, 2811, 1429, 1051, 1088, 1104, 1081, 88148, 111268, 1084, 1034, 27028, 2, 7, 19227, 5431, 2811, 1032, 1050, 1048, 1044, 1429, 19881, 3384, 2811, 1429, 1051, 1088, 1104, 1081, 88148, 111268, 1084, 46005, 8, 1784, 17253, 1395, 1032, 1050, 1048, 17633, 112399, 2, 3, 5847, 13089, 2549, 1455, 6138, 26723, 2479, 4, 2757, 26723, 15701, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tokens)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<s>[AVAILABLE_TOOLS][{\"type\": \"function\", \"function\": {\"name\": \"get_current_weather\", \"description\": \"Get the current weather\", \"parameters\": {\"type\": \"object\", \"properties\": {\"location\": {\"type\": \"string\", \"description\": \"The city and state, e.g. San Francisco, CA\"}, \"format\": {\"type\": \"string\", \"enum\": [\"celsius\", \"fahrenheit\"], \"description\": \"The temperature unit to use. Infer this from the users location.\"}}, \"required\": [\"location\", \"format\"]}}}][/AVAILABLE_TOOLS][SYS_INST]this is a system message[/SYS_INST][INST]What's the weather like today in Paris[/INST]Let me search that up for you[TOOL_CALLS][{\"name\": \"get_current_weather\", \"arguments\": {\"location\": \"Paris, FR\", \"format\": \"celsius\"}, \"id\": \"3XhQnxLsT\"}]</s>[TOOL_RESULTS]{\"content\": 20, \"call_id\": \"3XhQnxLsT\"}[/TOOL_RESULTS]The weather is 20 degrees Celsius</s>[INST]Describe what that temperature feels like[/INST]It feels warm</s>\n"
      ]
     }
    ],
